# lcpc_proof_of_storage

./: .gitignore  Cargo.toml  README.md  justfile
.config/: nextest.toml
lcpc-2d/src/: lib.rs  tests.rs
lcpc-brakedown-pc/src/: bench.rs  encode.rs  tests.rs
lcpc-ligero-pc/: Cargo.toml
lcpc-ligero-pc/src/: tests.rs
lcpc-test-fields/src/: lib.rs
proof-of-storage/: .gitignore  Cargo.toml  build.rs  limitations.md
proof-of-storage-refactor/: Cargo.toml  file_database
proof-of-storage-refactor/src/: fields.rs  lib.rs  networking.rs
proof-of-storage-refactor/src/networking/: typed_stream.rs
proof-of-storage/benches/: bench_utils.rs  buffer_vs_stream_file.rs  commit.rs  commit_leaves.rs  commit_to_different_shapes.rs  commit_to_different_shapes_bench.rs  edits_on_different_shapes.rs  file_to_commit_root.rs  flamegraph_profiler.rs  non_commit_benchmarks_on_different_shapes.rs
proof-of-storage/scripts/: generate_test_files_of_different_sizes.rs  testing_different_commit_mechanisms.rs
proof-of-storage/src/: File_Metadata.rs  databases.rs  fields.rs  file_metadata.rs  lcpc_online.rs  lib.rs  main.rs  networking.rs  tests.rs
proof-of-storage/src/databases/: client_record.rs  constants.rs  file_metadata.rs  server_host.rs  server_metadata.rs  user.rs
proof-of-storage/src/fields/: data_field.rs  field_generator_iter.rs  ft253_192.rs  random_byte_iterator.rs  writable_ft63.rs
proof-of-storage/src/lcpc_online/: column_digest_accumulator.rs  encoded_file_metadata.rs  encoded_file_reader.rs  encoded_file_writer.rs  file_formatter.rs  file_handler.rs  merkle_tree.rs  row_generator_iter.rs  tests.rs
proof-of-storage/src/networking/: client.rs  file_metadata_server.rs  server.rs  shared.rs  tests.rs
proof-of-storage/test_files/: test.txt
proof_of_storage/: Cargo.toml  test_file.txt
proof_of_storage/src/: fields.rs  main.rs  tests.rs
