[workspace]
members = ["lcpc-2d", "lcpc-ligero-pc", "lcpc-brakedown-pc", "lcpc-test-fields", "proof-of-storage"]
resolver = "2"

[workspace.dependencies]
bincode = "1.3"
bitvec = "1"
blake3 = { version = "1.5", features = ["traits-preview", "serde"] }
byteorder = "1"

digest = "0.10"

err-derive = "0.2"

ff = "0.13"
ff-derive-num = { path = "../ff-derive-num" }
fffft = { path = "../fffft" }

itertools = "0.10"

lcpc-2d = { path = "./lcpc-2d" }
lcpc-test-fields = { path = "./lcpc-test-fields" }
proof-of-storage-refactor = { path = "./proof-of-storage-refactor" }

merlin = "2.0"

ndarray = ">=0.11.0,<0.15"
num-traits = "0.2"

paste = "1.0"

rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = "1.5"

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sprs = "0.10"
subtle = "2.2"

typenum = "1.13"


pretty_assertions = "1.4.0"

[profile.release]
debug = true
