[package]
name = "proof-of-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcpc-ligero-pc = { path = "../lcpc-ligero-pc" }
fffft.workspace = true
lcpc-2d.workspace = true
typenum.workspace = true
bincode.workspace = true
blake3.workspace = true
ff.workspace = true
itertools.workspace = true
merlin.workspace = true
paste.workspace = true
rand.workspace = true
rand_chacha.workspace = true
lcpc-test-fields.workspace = true
bitvec.workspace = true
byteorder.workspace = true
ff-derive-num.workspace = true
num-traits.workspace = true
rand_core.workspace = true
serde.workspace = true
subtle.workspace = true
rayon.workspace = true
#memmap = "0.7.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
serde_json = "1.0.108"
futures = "0.3.30"
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.1", features = ["derive", "string"] }
anyhow = "1"
surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
once_cell = "1.19.0"
ulid = { version = "1.1.3", features = ["serde", "uuid"] }
deepsize = "0.2.0"
human-hash = "0.4.0"
uuid = "1.15.1"
chrono = "0.4.40"
cpu-time = "1.0.0"

[dev-dependencies]
pretty_assertions.workspace = true
serial_test = "*"
metrics = "0.24.1"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
pprof = { version = "0.14.0", features = ["flamegraph", "protobuf-codec"] }

[[bin]]
name = "pos"
path = "src/bin/pos.rs"

[profile.release]
debug = true

[[bench]]
name = "non_commit_benchmarks_on_different_shapes"
harness = false

[[bench]]
name = "commit_to_different_shapes_bench"
harness = false

[features]
benchmark = []
