[package]
name = "proof_of_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcpc-ligero-pc = {path = "../lcpc-ligero-pc"}
fffft.workspace = true
lcpc-2d.workspace = true
typenum.workspace = true
bincode.workspace = true
blake3.workspace = true
ff.workspace = true
itertools.workspace = true
merlin.workspace = true
paste.workspace = true
rand.workspace = true
rand_chacha.workspace = true
lcpc-test-fields.workspace = true
bitvec.workspace = true
byteorder.workspace = true
ff-derive-num.workspace = true
num-traits.workspace = true
rand_core.workspace = true
serde.workspace = true
subtle.workspace = true
memmap = "0.7.0"